yamls/koillection/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koillection
spec:
  selector:
    app: koillection
  ports:
    - protocol: TCP
      port: 80
      name: http
